Make PerlBench queue comparison statistically robust
Signed-off-by: Keshava Munegowda <keshava.gowda@gmail.com>